# INF1316---Sistemas-Operacionais

./: .gitignore
LAB2/EX1/: main  main.c  utils.h
LAB2/EX4/: child  child.c  main  main.c
LAB3/: main.c
LAB4/EX1/: main.c
LAB4/EX2/: main.c
LAB5/EX1/: main.c
LAB5/EX2/: main.c  texto2.txt
LAB5/EX4/: main.c
LAB6/EX1/: reader.c  writer.c
LAB6/EX2/: main.c
LAB6/EX3/: client  client.c  server  server.c
LAB7/EX3/: aula.h  limpa.c  writer1.c  writer2.c
LAB8/EX3/: main.c
LAB8/EX4/: main.c
T1/: CMakeLists.txt  Makefile  build_and_exec.sh  kernel.c  queue.h
T1/include/: app_functions.h  fifo.h  kernel_functions.h  kernel_reply.h  process.h  server_functions.h  shm_msg.h  udp_client.h  udp_client_functions.h  udp_msg.h  udp_rep.h  udp_req.h
T1/include/app/: app_functions.h
T1/include/kernel/: kernel_functions.h  kernel_reply.h  udp_client_functions.h
T1/include/server/: server_functions.h
T1/src/: app.c  fifo.c  process.c
T1/src/app/: app.c  app_functions.c
T1/src/intercontroller/: intercontroller.c
T1/src/kernel/: kernel.c  kernel_functions.c  kernel_reply.c  udp_client.c  udp_client_functions.c
T1/src/sfss-server/: server.c  server_functions.c
T1/utils/: queue.c  queue.h
